# monad-mev-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  blog-01.md  v0.1-implementation-plan.md  v0.1-spec.md  v0.2-implementation-plan.md  v0.2-spec.md  v1-implementation-plan.md  v1-spec.md  v2-implementation-plan.md  v2-spec.md
.github/workflows/: ci.yml
crates/monad-mev-cli/: Cargo.toml
crates/monad-mev-cli/src/: lib.rs  main.rs
crates/monad-mev-cli/tests/: help.rs  strategy.rs
crates/monad-mev-core/: Cargo.toml
crates/monad-mev-core/src/: error.rs  event.rs  health.rs  lib.rs  replay.rs  strategy.rs
crates/monad-mev-engine/: Cargo.toml
crates/monad-mev-engine/src/: continuous.rs  lib.rs
crates/monad-mev-events/: Cargo.toml
crates/monad-mev-events/src/: abi.rs  commit_state.rs  defi.rs  fixtures.rs  flow.rs  health.rs  lib.rs  live.rs  normalize.rs  raw.rs  replay.rs  sdk_live.rs  snapshot.rs  source.rs  stream.rs
crates/monad-mev-events/tests/: live_ring.rs  snapshot_replay.rs
crates/monad-mev-exec/: Cargo.toml
crates/monad-mev-exec/src/: lib.rs
crates/monad-mev-risk/: Cargo.toml
crates/monad-mev-risk/src/: lib.rs
crates/monad-mev-sim/: Cargo.toml
crates/monad-mev-sim/src/: lib.rs
crates/monad-mev-store/: Cargo.toml
crates/monad-mev-store/src/: lib.rs
docs/: README.md  cli.md  event-semantics.md  getting-started-live.md  getting-started-snapshot.md  ignored-tests.md  live-linux-runbook.md  release-checklist.md  release-scope.md  sdk-versioning.md  troubleshooting.md  v0.1-hardening-review.md  v1-hardening-review.md  writing-strategies.md
docs/v0.2/: continuous-engine.md  engine.md  execution.md  getting-started-protocol-capture.md  lifecycle-harness.md  production-runbook.md  risk.md  simulation.md  state-stores.md  strategy-packages.md
examples/dex-swap-monitor/: Cargo.toml
examples/dex-swap-monitor/src/: main.rs
examples/erc20-transfer-monitor/: Cargo.toml
examples/erc20-transfer-monitor/src/: main.rs
examples/live-observe/: Cargo.toml
examples/live-observe/src/: main.rs
examples/raw-event-printer/: Cargo.toml
examples/raw-event-printer/src/: main.rs
examples/replay-strategy-test/: Cargo.toml
examples/replay-strategy-test/src/: main.rs
fixtures/: README.md  chain-events.json  commit-states.json  defi-decoded.json  empty.json  gap.json  interleaved-transactions.json  lifecycle-signal.json  malformed-logs.json  raw-events.json
fixtures/golden/: actions.jsonl  decoded.jsonl  report.json
