[workspace]
members = [
    "crates/monad-mev-cli",
    "crates/monad-mev-core",
    "crates/monad-mev-events",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "GPL-3.0-or-later"
repository = "https://github.com/haythemsellami/monad-mev-rs"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
