[workspace]
members = [
    "crates/monad-mev-cli",
    "crates/monad-mev-core",
    "crates/monad-mev-events",
    "examples/dex-swap-monitor",
    "examples/erc20-transfer-monitor",
    "examples/live-observe",
    "examples/raw-event-printer",
    "examples/replay-strategy-test",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "GPL-3.0-or-later"
repository = "https://github.com/haythemsellami/monad-mev-rs"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
