[workspace]
members = [
    "crates/monad-mev-cli",
    "crates/monad-mev-core",
    "crates/monad-mev-engine",
    "crates/monad-mev-events",
    "crates/monad-mev-exec",
    "crates/monad-mev-risk",
    "crates/monad-mev-sim",
    "crates/monad-mev-store",
    "examples/dex-swap-monitor",
    "examples/erc20-transfer-monitor",
    "examples/live-observe",
    "examples/raw-event-printer",
    "examples/replay-strategy-test",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "GPL-3.0-or-later"
repository = "https://github.com/haythemsellami/monad-mev-rs"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
