[package]
name = "monad-mev-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
monad-mev-core = { path = "../monad-mev-core" }
monad-mev-engine = { path = "../monad-mev-engine" }
monad-mev-events = { path = "../monad-mev-events" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "monad-mev"
path = "src/main.rs"

[lints]
workspace = true
