[package]
name = "monad-mev-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
alloy-primitives = { version = "1", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
