[package]
name = "monad-mev-events"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
monad-mev-core = { path = "../monad-mev-core" }
serde = { version = "1.0", features = ["derive"] }
zstd = "0.13"

[features]
default = []
live = []
sdk = []
test-fixtures = []

[lints]
workspace = true
