[package]
name = "monad-mev-events"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
monad-mev-core = { path = "../monad-mev-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
monad-event-ring = { git = "https://github.com/category-labs/monad", rev = "4f2289307196a1b70dfa1fb5282600a07ca40767", optional = true }
monad-exec-events = { git = "https://github.com/category-labs/monad", rev = "4f2289307196a1b70dfa1fb5282600a07ca40767", optional = true }

[features]
default = []
live = ["sdk"]
sdk = ["dep:monad-event-ring", "dep:monad-exec-events"]
test-fixtures = []

[lints]
workspace = true
