[package]
name = "monad-mev-exec"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
monad-mev-core = { path = "../monad-mev-core" }
monad-mev-risk = { path = "../monad-mev-risk" }
monad-mev-sim = { path = "../monad-mev-sim" }
monad-mev-store = { path = "../monad-mev-store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
