[package]
name = "live-observe"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
monad-mev-core = { path = "../../crates/monad-mev-core" }
monad-mev-engine = { path = "../../crates/monad-mev-engine" }
monad-mev-events = { path = "../../crates/monad-mev-events", features = ["live"] }
serde_json = "1.0"

[lints]
workspace = true
